// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <form
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "width": "50%",
      }
    }
  >
    <img
      src="flatLogo.png"
      style={
        Object {
          "margin": "30px",
          "width": "150px",
        }
      }
    />
    <div
      className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        label="Insert your email"
        name="email"
        type="email"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      >
        TextField - 
      </div>
      <div
        label="password"
        name="password"
        type="password"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      >
        TextField - 
      </div>
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <a
          href="/forgot-password"
          onClick={[Function]}
          style={
            Object {
              "color": "background",
              "textDecoration": "none",
            }
          }
        >
          Forgot password?
        </a>
      </div>
      <button
        className="MuiButtonBase-root-31 MuiButton-root-5 MuiButton-contained-16 MuiButton-containedSecondary-18 MuiButton-raised-19 MuiButton-raisedSecondary-21"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginTop": 10,
          }
        }
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-6"
        >
          login
        </span>
        <span
          className="MuiTouchRipple-root-34"
        />
      </button>
    </div>
  </form>
</div>
`;

exports[`with errors renders correctly 1`] = `
<div
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "justifyContent": "center",
    }
  }
>
  <form
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "column",
        "justifyContent": "flex-start",
        "width": "50%",
      }
    }
  >
    <img
      src="flatLogo.png"
      style={
        Object {
          "margin": "30px",
          "width": "150px",
        }
      }
    />
    <div
      className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <div
        label="Insert your email"
        name="email"
        type="email"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      >
        TextField - 
      </div>
      <div
        label="password"
        name="password"
        type="password"
        validate={
          Array [
            [Function],
            [Function],
          ]
        }
      >
        TextField - 
      </div>
      <p
        className="MuiFormHelperText-root-41"
        style={
          Object {
            "color": "error",
          }
        }
      >
        foo-error
      </p>
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "flex-end",
          }
        }
      >
        <a
          href="/forgot-password"
          onClick={[Function]}
          style={
            Object {
              "color": "background",
              "textDecoration": "none",
            }
          }
        >
          Forgot password?
        </a>
      </div>
      <button
        className="MuiButtonBase-root-31 MuiButton-root-5 MuiButton-contained-16 MuiButton-containedSecondary-18 MuiButton-raised-19 MuiButton-raisedSecondary-21"
        disabled={false}
        onBlur={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "marginTop": 10,
          }
        }
        tabIndex="0"
        type="submit"
      >
        <span
          className="MuiButton-label-6"
        >
          login
        </span>
        <span
          className="MuiTouchRipple-root-34"
        />
      </button>
    </div>
  </form>
</div>
`;
